--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+### OS
+.DS_Store
+Session.vim
+.*.sw[a-z]
+*.un~
+*.rpmsave
+.bundle
+
+### Ruby
+*Gemfile.lock
+*Gemfile.local
 *.gem
 *.rbc
 /.config
@@ -6,45 +17,12 @@
 /pkg/
 /spec/reports/
 /spec/examples.txt
+/spec/fixtures/modules/
 /test/tmp/
 /test/version_tmp/
 /tmp/
 
-# Used by dotenv library to load environment variables.
-# .env
-
-## Specific to RubyMotion:
-.dat*
-.repl_history
-build/
-*.bridgesupport
-build-iPhoneOS/
-build-iPhoneSimulator/
-
-## Specific to RubyMotion (use of CocoaPods):
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# vendor/Pods/
-
-## Documentation cache and generated files:
-/.yardoc/
-/_yardoc/
-/doc/
-/rdoc/
-
-## Environment normalization:
-/.bundle/
-/vendor/bundle
-/lib/bundler/man/
-
-# for a library or gem, you might want to ignore these files since the code is
-# intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
-# .ruby-version
-# .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+### Control Repo
+/data/local.yaml
+/modules/
+/modules.local/
