--- a/environment.conf
+++ b/environment.conf
@@ -1,1 +1,1 @@
-modulepath = modules.local:modules.site:modules:/var/simp/environments/production/site_files:$basemodulepath
+modulepath = modules.site:modules:/var/simp/environments/production/site_files:$basemodulepath
